# purabo

./: CONTRIBUTING.md  LICENSE  README.md  biome.json  lefthook.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
docs/: RECIPES.md  purabo-detailed-spec.md  purabo-project-plan.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: autogenerated.toml
src-tauri/src/: app_manager.rs  commands.rs  error.rs  lib.rs  main.rs
src-tauri/src/engine/: mod.rs  pake.rs
src-tauri/src/integration/: linux.rs  macos.rs  mod.rs  windows.rs
src/app/: globals.css  page.tsx
src/components/: BackgroundForge.tsx  ConfirmModal.tsx  ForgeModal.tsx  MagicBar.tsx  RecipeCard.tsx  RecipeStore.tsx  SystemDoctor.tsx
src/store/: useAppStore.ts
